fix: cards at index page and post page would overflow if they contain long English or URL

--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -681,6 +681,7 @@ article .article-content .summary {
     padding-bottom: 2px;
     padding-left: 0;
     margin-bottom: 6px;
+    word-break: break-all;
 }
 
 article .article-content .publish-author {
